Resolves: tdf#150288 Do not prepend the locale's full date acceptance pattern

... if it wasn't present as first, but take the date acceptance
patterns as specified by the user.

Change-Id: Ife2fd39731bac0e0b121f22392f22b48ffc9c978
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138694
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 5061f59ae538a35c9531c366574c64007cb9f0be)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138545
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>